--- a/app/src/main/res/layout/add_ingredient.xml
+++ b/app/src/main/res/layout/add_ingredient.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <EditText
+        android:id="@+id/ingredient_calories"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="422dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginRight="182dp"
+        android:layout_marginBottom="533dp"
+        android:ems="10"
+        android:hint="Calories (Optional)"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.364" />
 
     <EditText
         android:id="@+id/ingredient_name"
@@ -19,14 +38,14 @@
         android:ems="10"
         android:hint="Name of Ingredient"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
+        app:layout_constraintBottom_toTopOf="@+id/ingredient_amount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/ingredient_amount"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -45,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />
 
     <Spinner
-        android:id="@+id/spinner_unit"
+        android:id="@+id/spinner_ingredient_unit"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
@@ -56,7 +75,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/ingredient_amount" />
 
     <Button
         android:id="@+id/save_ingredient"
@@ -72,5 +91,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_unit" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_unit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
